<resources>
    <string name="app_name">[Nicole Tran-wgn]Temperature Converter</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius_output">0.00</string>
    <string name="fahrenheit_output">32.00</string>
    <string name="warmer">I wish it were warmer!</string>
    <string name="colder">I wish it were colder!</string>
</resources>